# peaked-mpo-solver

./: .gitignore  BENCHMARKS.md  METHOD.md  README.md  pyproject.toml
diagnostics/: capture_machine_state.sh  compare_runs.py  live_dashboard.py  plot_run.py  plot_samples.py  svd_fingerprint.py
examples/: run_p9.sh
runs/p9_M1_Max/: samples.tsv  stats.csv  summary.json
runs/p9_M2_Pro/: samples.tsv  stats.csv  summary.json
runs/p9_M4/: samples.tsv  stats.csv  summary.json
runs/p9_M5_Pro/: samples.tsv  stats.csv  summary.json
src/p9solver/: __init__.py  cli.py  mpo.py  pipeline.py  qiskit_utils.py
